Ja da odmorim, a vama da se vrati koncentracija

--- a/assets/stylesheets/custom.less
+++ b/assets/stylesheets/custom.less
@@ -1,3 +1,9 @@
-@import (inline) '../../bower_components/bootstrap/dist/css/bootstrap.min.css';
-@import (inline) '../../bower_components/fontawesome/css/font-awesome.min.css';
+@import (inline) '../../bower_components/bootstrap/dist/css/bootstrap.css';
+@import (inline) '../../bower_components/font-awesome/css/font-awesome.css';
+
+@import https://cdn.jsdelivr.net/font-hack/2.018/css/hack.min.css;
+
+body{
+  font-family: Hack-Bold, monospace;
+}
 
