--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body ng-controller="ScopeController" class="hold-transition skin-blue sidebar-mini">
+  <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper" ui-view></div>
 
     <script src="./assets/javascript/javascript.js"></script>
